--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,10 @@
+Mon Jun 12 01:06:47 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetutilsxx.hh: moved template declarations from bsecxxutils.hh
+	here, to signal template usage errors.
+	added function TEMPLATE_ERROR::invalid_type<>();
+	added class TEMPLATE_ERROR::InvalidType<>;
+
 Sun Jun 11 23:48:59 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetthread.c: destruction phase fixups.
