--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-15  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 Sun May 21 11:56:04 2006  Tim Janik  <timj@gtk.org>
 
 	* POTFILES.in: translatable file updates.
