--- a/TODO
+++ b/TODO
@@ -1,23 +1,22 @@
 RELEASE(0.7.0):
+- fix beast popping up a help browser for release notes when new beast is installed
 - fix release-notes.html linking to release-news.html which should be news-file.html
 - shell/Makefile.am:check: test that bsesh-$VERSION is installed
-- toggle sensitivity of oscillator:Pusle properties when non-pulse wave form is selected
-- add normalize to bsewavetool
-- implement include path handling for bsewave files to fix slowtests/audio/Makefile.am:minisong-test
 - invoke ../bse/bseautodoc the same way the BSE shell is invoked (no rcfile etc)
-- move sfi_alloc_upper_power2 to birnet
-- move clean-generated: and generated: into Makefile.decl
 - s/bse-test-error/bse-error-test/
 - s/bse_engine_garbage_collect/bse_engine_user_thread_collect/
-- add default-settings config preference (authors, license): Creative Commons Attribution 2.5 (http://creativecommons.org/licenses/by/2.5/)
 - rename bsesh to bsescm
-- fix beast popping up a help browser for release notes when new beast is installed
-- fix "../../tools/bsefextract --", this needs bse_init_intern()
 - remove biquad normalization
-- WEB: add LAD-2005 paper to website
-- WEB: resources: http://packages.qa.debian.org/b/bse-alsa.html
-- s/deleet inputs/disconnect inputs/
+- s/delete inputs/disconnect inputs/
 - fix birnet_thread_run uses (unref thread)
+MAYBE-RELEASE:
+- WEB: resources: http://packages.qa.debian.org/b/bse-alsa.html
+- WEB: add LAD-2005 paper to website
+- move clean-generated: and generated: into Makefile.decl
+- move sfi_alloc_upper_power2 to birnet
+- implement include path handling for bsewave files to fix slowtests/audio/Makefile.am:minisong-test
+- add normalize to bsewavetool
+- toggle sensitivity of oscillator:Pusle properties when non-pulse wave form is selected
 INCOMPAT:
 - merge 2 * BseSimpleADSR into 1
 - delete BseAtanDistort
