--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jun 21 23:37:41 2006  Tim Janik  <timj@gtk.org>
+
+	* bsestorage.c: type fixup.
+
 Wed Jun 14 15:44:27 2006  Stefan Westerfeld <stefan@space.twc.de>
 
 	* bseitem.h(bse_item_undo_open): Added G_GNUC_PRINTF printf format
