applied updates by Michele Petrecca <michelinux@alice.it>.
Wed Jul  5 00:45:21 2006  Tim Janik  <timj@gtk.org>

        * it.po: applied updates by Michele Petrecca <michelinux@alice.it>.

svn path=/trunk/; revision=3794

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul  5 00:45:21 2006  Tim Janik  <timj@gtk.org>
+
+	* it.po: applied updates by Michele Petrecca <michelinux@alice.it>.
+
 2006-06-15  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
